[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ammo/mine.png" type="Texture" id=1]
[ext_resource path="res://weapons/mines.gd" type="Script" id=2]

[node name="Mines" type="Node2D"]
script = ExtResource( 2 )
is_flippable = false
is_centered = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="SpawnPosition" type="Position2D" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
